# DEISI_ERT_2026

./: README.md  dao.py  db_call.py  pyproject.toml  pyrightconfig.json
bdd/: README.md  environment copy.py  environment.py  req_001_lista_titulos.feature  req_004_filtrar_disponibilidade.feature
bdd/steps/: availability_steps.py  catalog_steps.py
config/: config.ini
deprecated/bdd/: req_002_ordenar_lista.feature  req_003_filtrar_lista.feature
deprecated/docs/: requirements_v2.md
deprecated/tests/: teste_pu_livro.py  teste_pu_livro_dao.py
docs/: Traceability_req_tc.md  acceptance_criteria_v1.md  acceptance_criteria_v2.md  gllossary.md  objectives_fcs.md  rem_v1.md  requirements_list.md  requirements_map.md  requirements_v0.md  requirements_v1.md  requirements_v3.md  test_cases.md  test_cases_v2.md  use_case_diagram.md  use_case_v1.md  use_case_v2.md  use_case_v3.md  variant.md  vision.md
docs/diagrams/: use_case_diagram.puml
sql/: alter_livro_disponivel_v2.sql  biblioteca.sql  biblioteca_v2.sql
src/desktop_app/: main.py
src/desktop_app/config/: config.ini
src/desktop_app/dao/: dao.py  database.py  db_call.py  livro_dao.py
src/desktop_app/models/: editora.py  livro.py
src/desktop_app/utils/: tools.py  validate.py
tests/: README.md  teste_pt_livro.py  teste_pt_livro_dao.py  teste_pu_livro_dao.py
